JVM Stop-The-World 补充。